Added example search key word

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         
 
         <div class="d-flex my-4">
-        <input class="form-control " type="text" placeholder="Enter Keywords">
+        <input class="form-control " type="text" placeholder="Enter Keywords such as "bottle">
         <button type="button" class="btn btn-success ml-3">Search</button>
         </div>
     </div>
